--- a/calculator.html
+++ b/calculator.html
@@ -398,7 +398,6 @@ document.addEventListener("DOMContentLoaded", function () {
   }
 });
 </script>
-
 </div>
 <!-- Sizing Table Side Panel -->
 <div id="sizingPanel" style="
@@ -591,5 +590,46 @@ function toggleNav() {
 <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
 </div>
 </footer>
-<script>function toggleNav() { document.querySelector('header').classList.toggle('nav-open'); }</script></body>
+<script>function toggleNav() { document.querySelector('header').classList.toggle('nav-open'); }</script>
+<script>
+function createAddToCartButton() {
+  const existing = document.getElementById('addToCartBtn');
+  if (existing) return;
+
+  const btn = document.createElement("button");
+  btn.id = "addToCartBtn";
+  btn.textContent = "Add to Cart";
+  btn.style.cssText = "width:94%;max-width:350px;padding:14px 0;font-size:1.1em;font-weight:600;border:none;border-radius:24px;color:#184211;background:linear-gradient(90deg,#f7b733 0%,#fcf6ba 100%);box-shadow:0 2px 14px rgba(247,183,51,0.11);transition:background 0.15s,color 0.12s,transform 0.1s;cursor:pointer;margin:20px auto 0 auto;display:block;text-align:center;";
+
+  btn.onclick = function () {
+    const stored = localStorage.getItem('wattSunSelectedKit');
+    if (stored) {
+      const kit = JSON.parse(stored);
+      const cart = JSON.parse(localStorage.getItem("wattSunCart") || "[]");
+      cart.push({
+        name: kit.kit,
+        power: kit.power,
+        price: kit.price,
+        quantity: 1
+      });
+      localStorage.setItem("wattSunCart", JSON.stringify(cart));
+      alert(kit.kit + " added to cart.");
+    } else {
+      alert("Please calculate your kit first.");
+    }
+  };
+
+  const note = document.querySelector('.form-note');
+  if (note && note.parentNode) {
+    note.parentNode.insertBefore(btn, note.nextSibling);
+  }
+}
+
+const originalCalc = calculateKit;
+calculateKit = function () {
+  originalCalc();
+  setTimeout(createAddToCartButton, 300);
+};
+</script>
+</body>
 </html>
