--- a/checkout.html
+++ b/checkout.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Checkout - WattSun Solar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="main.css"/>
-  <style>
+<meta charset="utf-8"/>
+<title>Checkout - WattSun Solar</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="main.css" rel="stylesheet"/>
+<style>
 /* --- Checkout page only styling --- */
 .container {
   max-width: 900px;
@@ -241,59 +242,79 @@ td.checkout-desc-tooltip {
 <body>
 <!-- HEADER: exactly as your index.html, styled by main.css -->
 <header>
-  <div class="header-bar">
-    <h1>WattSun Solar</h1>
-    <button class="nav-toggle" aria-label="Open menu" onclick="toggleNav()">&#9776;</button>
-  </div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="solutions.html">Solutions</a>
-    <a href="shop.html">Shop</a>
-    <a href="financing.html">Financing</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-    <a href="cart.html">Cart</a>
-  </nav>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Open menu" class="nav-toggle" onclick="toggleNav()">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+
+<span id="cartLinkWrapper" style="display:none;">
+<a href="cart.html">
+    🛒 Cart <span id="cartCount" style="font-weight:bold; background:#3E9F50; color:white; padding:2px 6px; border-radius:50%; font-size:0.8em; vertical-align:top;">0</span>
+</a>
+</span>
+<script>
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const count = cart.length;
+    const badge = document.getElementById("cartCount");
+    if (badge) badge.textContent = count;
+  }
+
+  const showOnPages = ["shop.html", "cart.html", "checkout.html"];
+  const currentPage = location.pathname.split("/").pop();
+  if (showOnPages.includes(currentPage)) {
+    document.getElementById("cartLinkWrapper").style.display = "inline-block";
+    updateCartCount();
+  }
+</script>
+
+</nav>
 </header>
 <div class="container">
-  <h2>Checkout</h2>
-  <div class="table-wrapper">
-    <table id="cartTable">
-      <thead>
-        <tr>
-          <th class="product-col">Product</th>
-          <th class="checkout-desc-tooltip">Description</th>
-          <th class="col-unit">Unit Price (KES)</th>
-          <th>Deposit/Unit (KES)</th>
-          <th>Quantity</th>
-          <th class="col-total">Total Price (KES)</th>
-          <th class="col-total-deposit">Total Deposit (KES)</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-  <div class="total" id="totalAmount">Total Deposit: KES 0</div>
-  <form class="checkout-form" id="checkoutForm"
-        name="order" method="POST" data-netlify="true" action="/thankyou.html">
-    <input type="hidden" name="form-name" value="order" />
-    <input id="cart_summary" name="cart_summary" type="hidden"/>
-    <label for="fullName">Full Name</label>
-    <input id="fullName" name="fullName" type="text" required placeholder="Your full name"/>
-    <label for="email">Email Address</label>
-    <input id="email" name="email" type="email" required placeholder="you@example.com"/>
-    <label for="phone">Phone Number</label>
-    <input id="phone" name="phone" type="tel" required placeholder="+254 7XX XXX XXX"/>
-    <label for="address">Delivery Address</label>
-    <textarea id="address" name="address" rows="3" required placeholder="Enter delivery location"></textarea>
-    <div class="checkout-actions">
-      <a href="shop.html" class="loan-btn secondary">&#8592; Back to Shop</a>
-      <button type="submit" class="btn">Place Order &rarr;</button>
-    </div>
-  </form>
+<h2>Checkout</h2>
+<div class="table-wrapper">
+<table id="cartTable">
+<thead>
+<tr>
+<th class="product-col">Product</th>
+<th class="checkout-desc-tooltip">Description</th>
+<th class="col-unit">Unit Price (KES)</th>
+<th>Deposit/Unit (KES)</th>
+<th>Quantity</th>
+<th class="col-total">Total Price (KES)</th>
+<th class="col-total-deposit">Total Deposit (KES)</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+<div class="total" id="totalAmount">Total Deposit: KES 0</div>
+<form action="/thankyou.html" class="checkout-form" data-netlify="true" id="checkoutForm" method="POST" name="order">
+<input name="form-name" type="hidden" value="order"/>
+<input id="cart_summary" name="cart_summary" type="hidden"/>
+<label for="fullName">Full Name</label>
+<input id="fullName" name="fullName" placeholder="Your full name" required="" type="text"/>
+<label for="email">Email Address</label>
+<input id="email" name="email" placeholder="you@example.com" required="" type="email"/>
+<label for="phone">Phone Number</label>
+<input id="phone" name="phone" placeholder="+254 7XX XXX XXX" required="" type="tel"/>
+<label for="address">Delivery Address</label>
+<textarea id="address" name="address" placeholder="Enter delivery location" required="" rows="3"></textarea>
+<div class="checkout-actions">
+<a class="loan-btn secondary" href="shop.html">← Back to Shop</a>
+<button class="btn" type="submit">Place Order →</button>
+</div>
+</form>
 </div>
 <footer>
-  &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+  © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
 </footer>
 <script>
 function toggleNav() {
