--- a/cart.html
+++ b/cart.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Cart - WattSun Solar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="main.css"/>
-  <style>
+<meta charset="utf-8"/>
+<title>Cart - WattSun Solar</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="main.css" rel="stylesheet"/>
+<style>
     html, body {
       width: 100vw;
       max-width: 100vw;
@@ -217,46 +218,67 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-bar">
-      <h1>WattSun Solar</h1>
-      <button class="nav-toggle" aria-label="Menu" onclick="toggleNav()">&#9776;</button>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="solutions.html">Solutions</a>
-      <a href="shop.html">Shop</a>
-      <a href="calculator.html">Calculator</a>
-      <a href="financing.html">Financing</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-      <a href="cart.html">🛒 Cart</a>
-    </nav>
-  </header>
-  <div class="container">
-    <h2>Your Cart</h2>
-    <div class="table-wrapper">
-      <table id="cartTable">
-        <thead>
-          <tr>
-            <th>Product</th>
-            <th class="col-unit">Unit Price (KES)</th>
-            <th>Deposit/Unit (KES)</th>
-            <th>Quantity</th>
-            <th>Total Price (KES)</th>
-            <th class="col-total-deposit">Total Deposit (KES)</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-    <div class="total" id="totalAmount">Total Deposit: KES 0</div>
-    <div class="actions">
-      <a class="btn" href="checkout.html">Proceed to Checkout</a>
-      <button class="btn btn-clear" id="clearCartBtn" type="button" style="display:none;">Clear Cart</button>
-    </div>
-  </div>
-  <script>
+<header>
+<div class="header-bar">
+<h1>WattSun Solar</h1>
+<button aria-label="Menu" class="nav-toggle" onclick="toggleNav()">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="calculator.html">Calculator</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+
+<span id="cartLinkWrapper" style="display:none;">
+<a href="cart.html">
+    🛒 Cart <span id="cartCount" style="font-weight:bold; background:#3E9F50; color:white; padding:2px 6px; border-radius:50%; font-size:0.8em; vertical-align:top;">0</span>
+</a>
+</span>
+<script>
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const count = cart.length;
+    const badge = document.getElementById("cartCount");
+    if (badge) badge.textContent = count;
+  }
+
+  const showOnPages = ["shop.html", "cart.html", "checkout.html"];
+  const currentPage = location.pathname.split("/").pop();
+  if (showOnPages.includes(currentPage)) {
+    document.getElementById("cartLinkWrapper").style.display = "inline-block";
+    updateCartCount();
+  }
+</script>
+
+</nav>
+</header>
+<div class="container">
+<h2>Your Cart</h2>
+<div class="table-wrapper">
+<table id="cartTable">
+<thead>
+<tr>
+<th>Product</th>
+<th class="col-unit">Unit Price (KES)</th>
+<th>Deposit/Unit (KES)</th>
+<th>Quantity</th>
+<th>Total Price (KES)</th>
+<th class="col-total-deposit">Total Deposit (KES)</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+<div class="total" id="totalAmount">Total Deposit: KES 0</div>
+<div class="actions">
+<a class="btn" href="checkout.html">Proceed to Checkout</a>
+<button class="btn btn-clear" id="clearCartBtn" style="display:none;" type="button">Clear Cart</button>
+</div>
+</div>
+<script>
     function toggleNav() {
       document.querySelector('header').classList.toggle('nav-open');
     }
@@ -311,9 +333,18 @@
         }
       }, true);
     });
-  </script>
-  <footer>
-    &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
-  </footer>
+  
+
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const count = cart.length;
+    const badge = document.getElementById("cartCount");
+    if (badge) badge.textContent = count;
+  }
+  updateCartCount(); // run once on load
+</script>
+<footer>
+    © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+</footer>
 </body>
 </html>
