--- a/checkout.html
+++ b/checkout.html
@@ -259,21 +259,6 @@ td.checkout-desc-tooltip {
     🛒 Cart <span id="cartCount" style="font-weight:bold; background:#3E9F50; color:white; padding:2px 6px; border-radius:50%; font-size:0.8em; vertical-align:top;">0</span>
 </a>
 </span>
-<script>
-  function updateCartCount() {
-    const cart = JSON.parse(localStorage.getItem("cart")) || [];
-    const count = cart.length;
-    const badge = document.getElementById("cartCount");
-    if (badge) badge.textContent = count;
-  }
-
-  const showOnPages = ["shop.html", "cart.html", "checkout.html"];
-  const currentPage = location.pathname.split("/").pop();
-  if (showOnPages.includes(currentPage)) {
-    document.getElementById("cartLinkWrapper").style.display = "inline-block";
-    updateCartCount();
-  }
-</script>
 
 </nav>
 </header>
@@ -401,6 +386,26 @@ document.addEventListener('DOMContentLoaded', function() {
   }, true);
 });
 
+</script>
+
+<script>
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const count = cart.length;
+    const badge = document.getElementById("cartCount");
+    if (badge) badge.textContent = count;
+  }
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const page = window.location.pathname.toLowerCase();
+    if (page.includes("shop") || page.includes("cart") || page.includes("checkout") || page.includes("financing")) {
+      const wrapper = document.getElementById("cartLinkWrapper");
+      if (wrapper) {
+        wrapper.style.display = "inline-block";
+        updateCartCount();
+      }
+    }
+  });
 </script>
 </body>
 </html>
