--- a/calculator.html
+++ b/calculator.html
@@ -512,7 +512,7 @@ button.loan-btn {
       power: totalWatt,
       price: price
     }));
-    window.location.href = 'checkout.html';
+    window.location.href = 'shop.html';
   }
 
   // Sizing Table Side Panel Logic
